# Shift-Start-api

./: .env  README.md  pyproject.toml  requirements.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
website/: mongodb.py
website/core/: settings.py  urls.py
website/shift_api/: Login.py  models.py  urls.py
website/shift_api/home/: login.py
website/shift_api/migrations/: 0001_initial.py  0002_user_delete_customuser.py  0003_product_delete_user.py  0004_delete_product.py
website/shift_api/templates/registration/: home.html  index.html  login.html  register.html  user_list.html
