[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ibrahim <113996610+Ibrahem2828@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
